--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <p> We are born to create .</p>
             <div class="info">
                 <p class="label">Feel free to drop us a line at:</p>
-                <a href="mailto:leonagency@mail.com?subject=contact" class="link">leonagency@mail.com</a>
+                <a href="mailto:leonagency@mail.com?subject=contact" class="link">ahmedalielian20@gmail.com</a>
                 <div class="social">
                     <div class="find">Find Us On Social Networks</div>
                     <i class="fa-brands fa-facebook"></i>
@@ -247,7 +247,7 @@
   <!-- End contact -->
   <!-- start footer -->
   <div class="footer">
-&copy; 2021 <span>leon</span> All Right Reserved
+&copy; 2023 <span>leon</span> All Right Reserved
 
   </div>
   <!-- End footer -->
